--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,4 +1,5 @@
 @use "bootstrap/scss/bootstrap.scss";
+@use "bootstrap/scss/bootstrap-grid.scss";
 
 .c4c-navbar {
     @extend .navbar;
@@ -7,12 +8,25 @@
 }
 
 .c4c-container {
-    background-color: white;
-    flex-flow: row nowrap;
+    @extend .container;
+}
+
+.c4c-row {
+    @extend .row;
+    @extend .justify-content-center;
+}
+
+.c4c-col {
+    @extend .col;
+    @extend .align-self-center;
+}
+
+.c4c-game {
+    @extend .col-auto
 }
 
 .instructions {
-    position:absolute;
+    position: absolute;
     top: 0;
     left: 0;
     font-size: 1.4em;
